# draw_app

./: .gitignore  LICENSE  README.md  architecture.md  graphics_signals.py  main.py  pyproject.toml  requirement.md  swagger.yaml  test.html  test.py
whiteboard/: curve_shap.py  menu.py  point.py  whiteboard.py
